--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -35,6 +35,8 @@
 #cmakedefine UA_ENABLE_ENCRYPTION
 #cmakedefine UA_ENABLE_HISTORIZING
 #cmakedefine UA_ENABLE_MICRO_EMB_DEV_PROFILE
+#cmakedefine UA_ENABLE_ENCODE_AND_DUMP
+#cmakedefine UA_ENABLE_USE_ENCODED_NODES
 #cmakedefine UA_ENABLE_EXPERIMENTAL_HISTORIZING
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS_EVENTS
 #cmakedefine UA_ENABLE_JSON_ENCODING
