--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -206,4 +206,13 @@ if(UA_ENABLE_PUBSUB)
             add_example(tutorial_pubsub_mqtt_publish pubsub/tutorial_pubsub_mqtt_publish.c)
         endif()
     endif()
+    if(UA_ENABLE_PUBSUB_SECURITY)
+        if(UA_ENABLE_AMALGAMATION)
+            message(WARNING "SKS examples cannot be used with AMALGAMATION. Skipping SKS examples.")
+        else(NOT UA_ENABLE_AMALGAMATION)
+            add_example(sks_server sks/sks_server.c)
+            add_example(sks_publisher sks/sks_publisher.c)
+            add_example(sks_subscriber sks/sks_subscriber.c)
+        endif()
+    endif()
 endif()
