feat(ns): Add possibility to blacklist nodes from nodeset generator
Blacklisting nodes is now possible through a special blacklist file.
If a node is blacklisted, the node itself and all references to that node are deleted.

Example blacklist file content for blacklisting specific node ids

(lines starting with `#` are comments/deactivated)

```text
i=79
i=83
i=94
#i=95
#i=96
i=97
i=98
i=99

ns=http://opcfoundation.org/UA/DI/;i=6555
ns=http://opcfoundation.org/UA/DI/;i=6564
#ns=http://opcfoundation.org/UA/DI/;i=15031
#ns=http://opcfoundation.org/UA/DI/;i=15032
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -291,6 +291,13 @@ mark_as_advanced(UA_MSVC_FORCE_STATIC_CRT)
 option(UA_FILE_NS0 "Override the NodeSet xml file used to generate namespace zero")
 mark_as_advanced(UA_FILE_NS0)
 
+# Blacklist file passed as --blacklist to the nodeset compiler. All the given nodes will be removed from the generated
+# nodeset, including all the references to and from that node. The format is a node id per line.
+# Supported formats: "i=123" (for NS0), "ns=2;s=asdf" (matches NS2 in that specific file), or recommended
+# "ns=http://opcfoundation.org/UA/DI/;i=123" namespace index independent node id
+option(UA_FILE_NS0_BLACKLIST "File containing blacklisted nodes which should not be included in the generated nodeset code.")
+mark_as_advanced(UA_FILE_NS0_BLACKLIST)
+
 # Semaphores/file system may not be available on embedded devices. It can be
 # disabled with the following option
 option(UA_ENABLE_DISCOVERY_SEMAPHORE "Enable Discovery Semaphore support" ON)
@@ -988,6 +995,7 @@ ua_generate_nodeset(
     NAME "ns0"
     FILE ${UA_FILE_NODESETS} ${UA_NODESET_FILE_DA}
     INTERNAL
+    BLACKLIST ${UA_FILE_NS0_BLACKLIST}
     IGNORE "${PROJECT_SOURCE_DIR}/tools/nodeset_compiler/NodeID_NS0_Base.txt"
     DEPENDS_TARGET "open62541-generator-types"
 )
