--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -27,6 +27,7 @@
 #cmakedefine UA_ENABLE_NODEMANAGEMENT
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS
 #cmakedefine UA_ENABLE_PUBSUB
+#cmakedefine UA_ENABLE_PUBSUB_MQTT
 #cmakedefine UA_ENABLE_PUBSUB_ETH_UADP
 #cmakedefine UA_ENABLE_PUBSUB_DELTAFRAMES
 #cmakedefine UA_ENABLE_PUBSUB_INFORMATIONMODEL
@@ -38,7 +39,6 @@
 #cmakedefine UA_ENABLE_EXPERIMENTAL_HISTORIZING
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS_EVENTS
 #cmakedefine UA_ENABLE_JSON_ENCODING
-#cmakedefine UA_ENABLE_PUBSUB_MQTT
 
 /* Multithreading */
 #cmakedefine UA_ENABLE_IMMUTABLE_NODES
@@ -62,6 +62,7 @@
 #cmakedefine UA_ENABLE_VALGRIND_INTERACTIVE
 #define UA_VALGRIND_INTERACTIVE_INTERVAL ${UA_VALGRIND_INTERACTIVE_INTERVAL}
 #cmakedefine UA_GENERATED_NAMESPACE_ZERO
+#cmakedefine UA_ENABLE_PUBSUB_JIT
 #cmakedefine UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING
 
 #cmakedefine UA_PACK_DEBIAN
