feat(PubSub): XDP integration with open62541
 - xdpsocket -> configured
 - Multiple receive messages handled
 - Follow Readme.txt file to work on this commit
 - New examples for XDP: TSN_XDP_mps_publisher.c and TSN_XDP_mps_loopback.c

Change-Id: I8c66a9723f1f0ea96ae12257657a3a9dd4698503

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -180,7 +180,7 @@ if(UA_ENABLE_NODEMANAGEMENT)
     add_example(access_control_server access_control/server_access_control.c)
     add_example(access_control_client access_control/client_access_control.c)
     if(UA_ENABLE_ENCRYPTION)
-    add_example(access_control_client_encrypt access_control_encrypt/client_access_control_encrypt.c)
+        add_example(access_control_client_encrypt access_control_encrypt/client_access_control_encrypt.c)
     endif()
 endif()
 
@@ -230,30 +230,44 @@ endif()
 
 if(UA_ENABLE_PUBSUB)
     if(NOT UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
-        add_example(tutorial_pubsub_connection pubsub/tutorial_pubsub_connection.c)
-        add_example(tutorial_pubsub_publish pubsub/tutorial_pubsub_publish.c)
-        if(UA_ENABLE_AMALGAMATION)
-            message(WARNING "PubSub subscriber tutorial (preview) can not be used with AMALGAMATION. Skipping tutorial_pubsub_subscribe.")
-        else(NOT UA_ENABLE_AMALGAMATION)
-            add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
-            add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
+        if (NOT UA_ENABLE_PUBSUB_ETH_UADP_XDP_RECV)
+            add_example(tutorial_pubsub_connection pubsub/tutorial_pubsub_connection.c)
+            add_example(tutorial_pubsub_publish pubsub/tutorial_pubsub_publish.c)
+            if(UA_ENABLE_AMALGAMATION)
+                message(WARNING "PubSub subscriber tutorial (preview) can not be used with AMALGAMATION. Skipping tutorial_pubsub_subscribe.")
+            else(NOT UA_ENABLE_AMALGAMATION)
+                add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
+                add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
+            endif()
         endif()
     else()
-        assign_source_group(${EXAMPLE_SOURCE})
-        message(WARNING "PubSub subscriber and publisher tutorial can not be used with UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING")
-        add_executable(TSN_ETF_publisher pubsub_realtime/udp_socket/TSN_ETF_publisher.c)
+       if(NOT UA_ENABLE_PUBSUB_ETH_UADP_XDP_RECV)
+           assign_source_group(${EXAMPLE_SOURCE})
+           message(WARNING "PubSub subscriber and publisher tutorial can not be used with UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING")
 
-        add_executable(TSN_ETF_loopback pubsub_realtime/udp_socket/TSN_ETF_loopback.c)
+           add_executable(TSN_ETF_publisher pubsub_realtime/udp_socket/TSN_ETF_publisher.c)
+           add_executable(TSN_ETF_loopback pubsub_realtime/udp_socket/TSN_ETF_loopback.c)
 
-        set_target_properties(TSN_ETF_publisher PROPERTIES FOLDER "open62541/examples")
-        set_target_properties(TSN_ETF_loopback PROPERTIES FOLDER "open62541/examples")
+           set_target_properties(TSN_ETF_publisher PROPERTIES FOLDER "open62541/examples")
+           set_target_properties(TSN_ETF_loopback PROPERTIES FOLDER "open62541/examples")
 
-        set_target_properties(TSN_ETF_publisher PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
-        set_target_properties(TSN_ETF_loopback PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+           set_target_properties(TSN_ETF_publisher PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+           set_target_properties(TSN_ETF_loopback PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
-        target_link_libraries(TSN_ETF_publisher open62541 ${open62541_LIBRARIES} rt pthread mbedtls mbedx509 mbedcrypto) #original line with crypto
-        target_link_libraries(TSN_ETF_loopback open62541 ${open62541_LIBRARIES} rt pthread mbedtls mbedx509 mbedcrypto)
+           target_link_libraries(TSN_ETF_publisher open62541 ${open62541_LIBRARIES} rt pthread mbedtls mbedx509 mbedcrypto) #original line with crypto
+           target_link_libraries(TSN_ETF_loopback open62541 ${open62541_LIBRARIES} rt pthread mbedtls mbedx509 mbedcrypto)
+        else()
+            message(WARNING "PubSub tutorial and ETF publisher and subscriber can not be used with UA_ENABLE_PUBSUB_ETH_UADP_XDP_RECV")
+            message(WARNING "See open62541/examples/pubsub_realtime/xdp/README.txt for steps to run XDP integrated examples")
+            add_executable(TSN_XDP_mps_publisher  pubsub_realtime/xdp/TSN_XDP_mps_publisher.c)
+            set_target_properties(TSN_XDP_mps_publisher  PROPERTIES FOLDER "open62541/examples")
+            set_target_properties(TSN_XDP_mps_publisher PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+            target_link_libraries(TSN_XDP_mps_publisher open62541 ${open62541_LIBRARIES} rt pthread mbedtls mbedx509 mbedcrypto elf)
 
+            add_executable(TSN_XDP_mps_loopback  pubsub_realtime/xdp/TSN_XDP_mps_loopback.c)
+            set_target_properties(TSN_XDP_mps_loopback  PROPERTIES FOLDER "open62541/examples")
+            set_target_properties(TSN_XDP_mps_loopback PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+            target_link_libraries(TSN_XDP_mps_loopback open62541 ${open62541_LIBRARIES} rt pthread mbedtls mbedx509 mbedcrypto elf)
+         endif() 
     endif()
-
 endif()
