--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -64,6 +64,7 @@
 #define UA_VALGRIND_INTERACTIVE_INTERVAL ${UA_VALGRIND_INTERACTIVE_INTERVAL}
 #cmakedefine UA_GENERATED_NAMESPACE_ZERO
 #cmakedefine UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING
+#cmakedefine UA_ENABLE_PUBSUB_ETH_UADP_XDP_RECV
 
 #cmakedefine UA_PACK_DEBIAN
 
